--- a/twigs/templates/front.twig
+++ b/twigs/templates/front.twig
@@ -5,6 +5,22 @@
         <div class="grid-container">
             <h1>{{ post.title }}</h1>
         </div>
+        <section class="zg-map-wrap position-relative">
+            <div id="map" style="width: 100%; height: 80vh;"></div>
+            <div class="zg-country-info">
+                <div class="zg-country-info__header">
+                    <h2>USA</h2>
+                </div>
+                <!-- /.zg-country-info__header -->
+                <div class="zg-country-info__body">
+                    Body
+                </div>
+                <div class="zg-country-info__footer">
+                    footer
+                </div>
+            </div>
+        </section>
+
     </main>
 {% endblock %}
 
