--- a/twigs/partial/footer.twig
+++ b/twigs/partial/footer.twig
@@ -1,7 +1,7 @@
 <footer class="zg-footer">
     <div class="grid-container">
         <div class="grid-x grid-margin-x">
-            <div class="cell small-12 medium-6">{{ footer.copyright|replace({'[year]': "now"|date('Y')}) }}</div>
+            <div class="cell small-12 medium-6">© {{ footer.copyright|replace({'[year]': "now"|date('Y')}) }} BeCovid. All Rights Reserved.</div>
             <div class="cell small-12 medium-6 medium-text-right">Made by <a href="https://zgraya.digital">zgraya.digital</a></div>
         </div>
     </div>
