--- a/twigs/partial/header.twig
+++ b/twigs/partial/header.twig
@@ -1,15 +1,19 @@
 <header class="zg-header">
     <div class="zg-header-bar">
         <a class="zg-logo" href="{{ site.url|e('esc_url') }}" rel="home" title="{{ site.name }}">
-            {% if custom_logo.src %}
-                <img src="{{custom_logo.src}}" alt="{{ custom_logo.alt }}" width="{{ custom_logo.width }}" height="{{ custom_logo.height }}" />
-            {% else %}
-                {{ site.name }}
-            {% endif %}
+            <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M21.0757 4.75L23.5 7.17431L30.6743 0H25.7632L21.0757 4.75ZM32 8.11181L28.5757 4.75L32 1.32568V8.11181ZM6.07335 19.7489L12.2467 13.5755L14.6707 15.9994L8.4973 22.1728L6.07335 19.7489ZM21.0717 19.7505L27.2451 13.5771L29.6691 16.0011L23.4957 22.1745L21.0717 19.7505ZM15.996 17.326L13.5721 19.7499L19.7455 25.9233L22.1694 23.4994L15.996 17.326ZM12.25 21.0757L18.4243 27.25L16 29.7368L9.82568 23.5L12.25 21.0757ZM31.0625 17.3257L32 18.2632V23.1118L28.5757 19.75L31.0625 17.3257ZM2.32417 15.9989L8.49756 9.8255L10.9215 12.2494L4.74811 18.4228L2.32417 15.9989ZM23.4959 9.82713L17.3225 16.0005L19.7465 18.4245L25.9199 12.2511L23.4959 9.82713ZM27.25 6.07568L32 10.7632V15.6118L24.8257 8.5L27.25 6.07568ZM13.5757 4.75L19.75 10.9243L22.1743 8.5L16 2.26318L13.5757 4.75ZM12.2477 6.07672L9.82373 8.50067L15.9971 14.6741L18.4211 12.2501L12.2477 6.07672ZM25.9243 27.25L23.5 24.8257L16.3882 32H21.2368L25.9243 27.25ZM12.25 28.5757L14.6743 31.0625L13.7368 32H8.88818L12.25 28.5757ZM10.9243 27.25L8.5 24.8257L1.32569 32H6.23682L10.9243 27.25ZM24.8257 23.5L27.25 21.0757L32 25.7632V30.6743L24.8257 23.5ZM0 23.8882V30.6743L3.42431 27.25L0 23.8882ZM23.8882 32L27.25 28.5757L30.6743 32H23.8882ZM17.3257 0.9375L19.75 3.42431L23.1118 0H18.2632L17.3257 0.9375ZM8.11182 0L4.75 3.42431L1.32569 0H8.11182ZM4.75 25.9243L7.17431 23.5L0 16.3882V21.2368L4.75 25.9243ZM8.5 7.17431L6.07568 4.75L10.7632 0H15.6118L8.5 7.17431ZM4.75 10.9243L7.17431 8.5L0 1.32568V6.23681L4.75 10.9243ZM3.42431 12.25L0.9375 14.6743L0 13.7368V8.88818L3.42431 12.25Z" fill="currentColor"/>
+            </svg>
+            BeCovid
         </a>
-        <nav id="nav-main" class="nav-main">
-            {% include "partial/menu.twig" with {'items': menu.desktop_nav.get_items, 'class': 'menu show-for-large'} %}
-            <button aria-label="{{ __( 'Main Menu', 'foundationpress' ) }}" class="menu-icon dark hide-for-large" type="button" data-toggle="off-canvas-menu"></button>
+        <nav id="nav-main" class="zg-nav-main">
+{#            {% include "partial/menu.twig" with {'items': menu.desktop_nav.get_items, 'class': 'menu show-for-large'} %}#}
+{#            <button aria-label="{{ __( 'Main Menu', 'foundationpress' ) }}" class="menu-icon dark hide-for-large" type="button" data-toggle="off-canvas-menu"></button>#}
+            <button class="zg-switch-theme-color" data-toggle-theme-color>
+                <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M15.5658 15.3296C16.8024 14.0925 17.6092 12.5883 17.9863 11.0027C18.0944 10.5485 17.5363 10.2418 17.2072 10.5728C17.2031 10.5768 17.1991 10.5809 17.195 10.5849C14.4436 13.3374 9.94955 13.2843 7.26525 10.4257C4.73457 7.7307 4.76779 3.5467 7.33766 0.889053C7.37007 0.855546 7.40272 0.822435 7.43564 0.789718C7.76573 0.461658 7.45721 -0.0940025 7.00452 0.0136152C5.43353 0.387093 3.94243 1.1826 2.7118 2.40055C-0.886352 5.9617 -0.906618 11.7354 2.66754 15.3206C6.22607 18.8902 12.0035 18.8931 15.5658 15.3296Z" fill="white"/>
+                </svg>
+            </button>
         </nav><!-- #nav -->
     </div>
 </header>
