--- a/twigs/templates/front.twig
+++ b/twigs/templates/front.twig
@@ -3,7 +3,14 @@
 {% block content %}
     <main>
         <div class="grid-container">
-            <h1>{{ post.title }}</h1>
+            <h1 class="zg-title-dot zg-main-title">{{ __('TRAVEL SAFELY', 'zg') }}</h1>
+            <div class="grid-x">
+                <div class="cell small-12 medium-6 large-4">
+                    <a class="zg-button" href="#map">
+                        <span>{{ __('See Map', 'zg') }}</span>
+                    </a>
+                </div>
+            </div>
         </div>
     </main>
 {% endblock %}
