--- a/twigs/base.twig
+++ b/twigs/base.twig
@@ -13,8 +13,7 @@
         {% endblock %}
     {% endblock %}
 </head>
-
-<body class="{{ body_class }}" data-template="base.twig">
+<body class="{{ body_class }} {{ theme_color ? theme_color : '' }}" data-template="base.twig">
 <div class="off-canvas-wrapper">
     <div class="off-canvas-wrapper-inner" data-off-canvas-wrapper>
         {% block offcanvas %}
