--- a/src/assets/scss/templates/_front.scss
+++ b/src/assets/scss/templates/_front.scss
@@ -11,4 +11,24 @@
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
   float: left;
   padding: 20px;
+  width: 400px;
+  height: calc( 100% - 200px);
+
+
+  &__header{
+    border-bottom: 1px solid gray;
+  }
+  &__body{
+    flex-grow: 1;
+  }
+  &__footer{
+    border-top: 1px solid gray;
+  }
+  &__inner{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: center;
+  }
 }
