--- a/src/assets/scss/templates/_front.scss
+++ b/src/assets/scss/templates/_front.scss
@@ -1,4 +1,4 @@
-.zg-country-info{
+.zg-country-info {
   position: absolute;
   top: 200px;
   right: 15px;
@@ -11,4 +11,37 @@
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
   float: left;
   padding: 20px;
+}
+
+
+.zg-hero {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  height: 100vh;
+  padding: 60px 0;
+  background-size: cover;
+  background-position: 50% 50%;
+  z-index: 1;
+
+  &::after {
+    display: block;
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    background-color: rgba($dark-blue, 0.3);
+  }
+
+  @include breakpoint(medium) {
+    padding: 80px 0;
+  }
+  @include breakpoint(large) {
+    padding: 160px 0;
+  }
 }
