--- a/twigs/base.twig
+++ b/twigs/base.twig
@@ -34,6 +34,7 @@
         </div><!-- Close off-canvas wrapper inner -->
     </div><!-- Close off-canvas wrapper -->
 </div><!-- Close off-canvas content wrapper -->
+{% include 'partial/svg-sprite.twig' %}
 {{ function('wp_footer') }}
 </body>
 </html>
