--- a/src/assets/scss/components/_jqvmap.scss
+++ b/src/assets/scss/components/_jqvmap.scss
@@ -58,14 +58,14 @@ $box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05) !default;
 // Tooltip
 $tooltip-shadow: 1px 2px 12px rgba(0, 0, 0, .2) !default;
 $tooltip-font-family: sans-serif, Verdana !default;
-$tooltip-bg-color: #5c5cff !default;
-$tooltip-radius: 3px !default;
+$tooltip-bg-color: var(--primary-color) !default;
+$tooltip-radius: $global-radius !default;
 $tooltip-font-size: smaller !default;
 $tooltip-padding: 3px 5px !default;
 
 // Zoom buttons
-$zoom-btns-bg-color: #292929 !default;
-$zoom-btns-radius: 3px !default;
+$zoom-btns-bg-color: var(--secondary-color) !default;
+$zoom-btns-radius: $global-radius !default;
 $zoom-btns-height: 15px !default;
 $zoom-btns-padding: 3px !default;
 $zoom-btns-width: 15px !default;
