--- a/twigs/base.twig
+++ b/twigs/base.twig
@@ -8,6 +8,7 @@
         <link rel="dns-prefetch" href="https://fonts.gstatic.com">
         <link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
         <link rel="dns-prefetch" href="https://code.jquery.com/">
+        <meta name="theme-color" content="--primary-color">
         {{ function('wp_head') }}
         {% block head %}
         {% endblock %}
