--- a/twigs/partial/svg-sprite.twig
+++ b/twigs/partial/svg-sprite.twig
@@ -1,3 +1,7 @@
+<svg class="cursor" width="80" height="80" viewBox="0 0 80 80" data-cursor>
+    <circle class="cursor__inner" cx="40" cy="40" r="5"/>
+</svg>
+
 <svg style="position: absolute; width: 1px; height: 1px; visibility: hidden">
     <symbol id="menu-icon-close" viewBox="0 0 60 24" fill="none">
         <path d="M1 18C1 18 8.5 12 30 12C51.5 12 59 18 59 18" stroke="white" stroke-width="2"/>
