--- a/src/assets/scss/templates/_front.scss
+++ b/src/assets/scss/templates/_front.scss
@@ -5,14 +5,14 @@
     position: absolute;
     top: 200px;
     right: 15px;
-    background-color: #FFF;
-    border: 1px solid #e5e7eb;
+    background-color: var(--body-background);
+    border: 1px solid $gray;
     margin-left: 0.75rem;
-    border-radius: 0.25rem;
+    border-radius: $global-radius;
     padding: 0 0.1875rem;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
     float: left;
-    padding: 20px;
+    padding: 25px;
     width: 400px;
     height: calc(100% - 200px);
     display: flex;
@@ -20,20 +20,46 @@
   }
   &__header{
     border-bottom: 1px solid $medium-gray;
-    .close-button{
-      top: 0;
-      right: 0;
-      line-height: 1;
-    }
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .close-button{
+    font-size: 16px;
+    top: 7px;
+    right: 7px;
+    line-height: 1;
   }
   &__body{
     flex-grow: 1;
     overflow: auto;
     padding-top: 30px;
+    & > h4 {
+      display: flex;
+      align-items: center;
+    }
+    &::-webkit-scrollbar {
+      width: 8px;
+      cursor: pointer;
+    }
+    &::-webkit-scrollbar-track {
+      background: var(--body-background);
+      cursor: pointer;
+    }
+    &::-webkit-scrollbar-thumb {
+      background-color: var(--primary-color);
+      cursor: pointer;
+    }
+
   }
   &__footer{
-    border-top: 1px solid $medium-gray;
+    border-top: 1px solid $gray;
     padding-top: 10px;
+    & > div {
+      display: flex;
+      //align-items: center;
+    }
     & > :last-child{
       margin-bottom: 0;
     }
@@ -52,7 +78,6 @@
   background-size: cover;
   background-position: 50% 50%;
   z-index: 1;
-
   &::after {
     display: block;
     content: "";
