--- a/twigs/base.twig
+++ b/twigs/base.twig
@@ -9,6 +9,7 @@
         <link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
         <link rel="dns-prefetch" href="https://code.jquery.com/">
         <meta name="theme-color" content="--primary-color">
+        <meta charset="UTF-8">
         {{ function('wp_head') }}
         {% block head %}
         {% endblock %}
