--- a/src/assets/scss/templates/_front.scss
+++ b/src/assets/scss/templates/_front.scss
@@ -46,6 +46,13 @@
   background-position: 50% 50%;
   z-index: 1;
 
+  &__content {
+    font-size: 20px;
+    max-width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   &::after {
     display: block;
     content: "";
