--- a/src/assets/scss/templates/_front.scss
+++ b/src/assets/scss/templates/_front.scss
@@ -7,16 +7,20 @@
     right: 15px;
     background-color: var(--body-background);
     border: 1px solid $gray;
-    margin-left: 0.75rem;
     border-radius: $global-radius;
-    padding: 0 0.1875rem;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
     float: left;
     padding: 25px;
-    width: 400px;
     height: calc(100% - 200px);
     display: flex;
     flex-direction: column;
+    left: 15px;
+    z-index: 2;
+    @include breakpoint(medium) {
+      width: 400px;
+      left: auto;
+    }
+
   }
   &__header{
     border-bottom: 1px solid $medium-gray;
