--- a/src/assets/scss/templates/_front.scss
+++ b/src/assets/scss/templates/_front.scss
@@ -84,10 +84,11 @@
   z-index: 1;
 
   &__content {
-    font-size: 20px;
+    font-size: 28px;
     max-width: 60%;
     margin-left: auto;
     margin-right: auto;
+    mix-blend-mode: overlay;
   }
 
   &::after {
